# kubecouncil

./: .gitignore  AGENTS.md  Makefile  README.md
.github/workflows/: verify-deploy.yml
.scratch/issues/: 03-kustomize-analysis.md  04-safe-rehearsal-twin.md  05-scenario-runner.md  07-plan-execution-and-audit.md  10-deployment-hardening-and-evaluation.md  13-incident-contracts-and-fake-investigation.md  14-application-profile-and-enrollment-readiness.md  15-manual-incident-and-evidence-window.md  (+9 more)
backend/: Dockerfile  Dockerfile.executor  Dockerfile.investigator  pyproject.toml
backend/app/: __init__.py  main.py  observability.py
backend/app/agents/: council.py
backend/app/api/: applications.py  health.py  identity.py  incidents.py  repositories.py  runs.py
backend/app/bootstrap/: __init__.py  __main__.py  cli.py  inspector.py  models.py  planner.py  smoke.py
backend/app/domain/: __init__.py  approval.py  fakes.py  identity.py  incident_fakes.py  incidents.py  interfaces.py  models.py
backend/app/executor/: __init__.py  __main__.py
backend/app/kubernetes/: __init__.py  cleanup.py  client.py  kustomize.py
backend/app/pull_requests/: __init__.py  github.py  planner.py
backend/app/rehearsal/: __init__.py  executor.py  planner.py
backend/app/repositories/: __init__.py  github.py
backend/app/runtime/: __init__.py  composition.py  config.py  live_providers.py  readiness.py  workers.py
backend/app/scenario_controller/: __init__.py  api.py  kubernetes.py  models.py  service.py
backend/app/scenarios/: __init__.py  k6.py
backend/app/services/: adk_council.py  alerts.py  approval.py  council.py  enrollment.py  evidence.py  evidence_gateway.py  identity.py  incident_store.py  intervention_executor.py  intervention_queue.py  proposal_policy.py  recovery_verifier.py  workload_lease.py
backend/tests/: conftest.py  test_approval.py  test_complete_intervention_actions.py  test_council.py  test_demo_target.py  test_deployed_runtime.py  test_domain_models.py  test_durable_incidents.py  test_enrollment.py  test_evidence_gateway.py  test_fakes.py  test_gke_bootstrap.py  test_incident_council.py  test_incidents.py  test_intervention_executor.py  test_kustomize_analysis.py  test_online_boutique_scenarios.py  test_operational_hardening.py  test_plan_execution.py  test_proposal_policy.py  test_pull_requests.py  test_recovery_verification.py  test_rehearsal.py  test_repository_api.py  test_repository_provider.py  test_scenarios.py
backend/tests/integration/: test_durable_gcp_adapters.py  test_gke_bootstrap_live.py  test_gke_runtime_live.py
demo-target/: README.md
docs/: agent-evaluation-fixtures.yaml
frontend/: Dockerfile  Dockerfile.ui  index.html  package-lock.json  package.json
(+62 files in other folders)
