[project]
name = "kubecouncil-backend"
version = "0.1.0"
description = "Backend for KubeCouncil rehearsal workflows"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "google-adk>=0.1.0",
  "pydantic>=2.8.0",
  "pyyaml>=6.0.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "httpx2>=0.28.0",
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "ruff>=0.5.0",
  "types-PyYAML>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "integration: tests requiring external services or a configured Kubernetes context",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
