[project]
name = "kubecouncil-backend"
version = "0.1.0"
description = "Backend for KubeCouncil rehearsal workflows"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "google-auth>=2.35.0",
  "google-cloud-firestore>=2.19.0",
  "google-cloud-pubsub>=2.27.0",
  "kubernetes>=35.0.0,<37.0.0",
  "pydantic>=2.8.0",
  "pyyaml>=6.0.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
investigator = [
  "google-adk>=2.3.0,<3.0.0",
]
dev = [
  "google-adk>=2.3.0,<3.0.0",
  "httpx2>=0.28.0",
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "ruff>=0.5.0",
  "types-PyYAML>=6.0.0",
]

[project.scripts]
kubecouncil-bootstrap = "app.bootstrap.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "integration: tests requiring external services or a configured Kubernetes context",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["google.adk.*", "google.genai.*", "kubernetes", "kubernetes.*"]
ignore_missing_imports = true
